1999-06-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* resource.cc: set http:proxy to getenv(http_proxy) initially.

1999-06-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: remove prehistoric methods DataReady
	  and Block.

1999-06-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix for ftpcopy in passive mode.

1999-06-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: prevent coredump when short_desc!=0 && long_desc==0.

1999-06-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* module.c: handle case with RTLD_NOW undefined (SunOS4)
	* FtpListInfo.cc, HttpDir.cc: correct format string.

1999-06-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* Makefile.am: remove module before its re-creation.
	* ascii_ctype.h: add is_ascii_xdigit.
	* Http.cc, Http.h: support for keep-alive getting info; support
	  for chunked transfer encoding.
	* url.cc: always encode control characters.

1999-05-31  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, Http.h: hook up HttpListInfo
	* HttpDir.cc, HttpDir.h: HttpListInfo implemented
	* FtpListInfo.cc: fixed bug with setting precise file time.
	* FileAccess.cc: untranslate some messages which indicate bug in app.
	* complete.cc: completion for new commands; add cache completion;
	  reset SIGINT count so that interrupted completion does not clear
	  line; call Open from GetInfoArray, Rename to avoid code duplication.
	* PutJob.cc, PutJob.h: add entity_date member; set date after Open.
	* LocalAccess.cc: don't use Poll; set file time in StoreStatus.
	* CmdExec.h: extern bookmark_subcmd, cache_subcmd.
	* ftpclass.cc: don't save line for every 213 response - this fixes
	  quote stat .
	* CatJob.cc, CatJob.h: removed globbing support,
	  now glob cat can be used.
	* commands.cc: use string_alloca; add slash for new bookmarks.
	* FtpGlob.cc: fix workarounds to check original; move workaround
	  for "no /" bug here from complete.cc.
